--- a/ipd/ppp/plugin/ppppp/ppppp.ui
+++ b/ipd/ppp/plugin/ppppp/ppppp.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>157</width>
-    <height>558</height>
+    <width>557</width>
+    <height>392</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="stier">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>30</y>
+     <x>30</x>
+     <y>20</y>
      <width>80</width>
      <height>25</height>
     </rect>
@@ -32,8 +32,8 @@
   <widget class="QPushButton" name="atier">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>80</y>
+     <x>120</x>
+     <y>20</y>
      <width>80</width>
      <height>25</height>
     </rect>
@@ -48,8 +48,8 @@
   <widget class="QPushButton" name="btier">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>130</y>
+     <x>210</x>
+     <y>20</y>
      <width>80</width>
      <height>25</height>
     </rect>
@@ -64,8 +64,8 @@
   <widget class="QPushButton" name="ctier">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>180</y>
+     <x>30</x>
+     <y>50</y>
      <width>80</width>
      <height>25</height>
     </rect>
@@ -80,8 +80,8 @@
   <widget class="QPushButton" name="dtier">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>230</y>
+     <x>120</x>
+     <y>50</y>
      <width>80</width>
      <height>25</height>
     </rect>
@@ -96,8 +96,8 @@
   <widget class="QPushButton" name="ftier">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>280</y>
+     <x>210</x>
+     <y>50</y>
      <width>80</width>
      <height>25</height>
     </rect>
@@ -109,46 +109,57 @@
     <string>F Tier</string>
    </property>
   </widget>
+  <widget class="QListWidget" name="polls">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>20</y>
+     <width>221</width>
+     <height>311</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>test poll1</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>test poll2</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QListWidget" name="toggles">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>90</y>
+     <width>256</width>
+     <height>241</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>test toggle1</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>test toggle2</string>
+    </property>
+   </item>
+  </widget>
   <widget class="QPushButton" name="quit">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>330</y>
-     <width>80</width>
+     <x>30</x>
+     <y>350</y>
+     <width>501</width>
      <height>25</height>
     </rect>
    </property>
-   <property name="toolTip">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;I've seen enough ugly proteins for one day!&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
    <property name="text">
     <string>Quit</string>
-   </property>
-  </widget>
-  <widget class="QTextBrowser" name="status">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>390</y>
-     <width>121</width>
-     <height>141</height>
-    </rect>
-   </property>
-   <property name="html">
-    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-hr { height: 1px; border-width: 0; }
-li.unchecked::marker { content: &quot;\2610&quot;; }
-li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Status:&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;S&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;A&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;B&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;C&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;D&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;F&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
  </widget>
