--- a/ipd/ppp/plugin/ppppp/ppppp.ui
+++ b/ipd/ppp/plugin/ppppp/ppppp.ui
@@ -99,10 +99,10 @@
   <widget class="QListWidget" name="polls">
    <property name="geometry">
     <rect>
-     <x>300</x>
+     <x>290</x>
      <y>90</y>
-     <width>251</width>
-     <height>261</height>
+     <width>261</width>
+     <height>231</height>
     </rect>
    </property>
   </widget>
@@ -112,16 +112,16 @@
      <x>20</x>
      <y>90</y>
      <width>261</width>
-     <height>261</height>
+     <height>231</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="newpoll">
    <property name="geometry">
     <rect>
-     <x>300</x>
+     <x>290</x>
      <y>60</y>
-     <width>91</width>
+     <width>101</width>
      <height>25</height>
     </rect>
    </property>
@@ -222,7 +222,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
     <rect>
      <x>20</x>
      <y>60</y>
-     <width>261</width>
+     <width>131</width>
      <height>25</height>
     </rect>
    </property>
@@ -334,6 +334,51 @@ li.checked::marker { content: &quot;\2612&quot;; }
    </property>
    <property name="text">
     <string>Save Prettier Protein Project Pymol Plug-in Panel Pickle to ~/.config/ppp</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="delopt">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>60</y>
+     <width>121</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Delete Option</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="cmdsearch">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>320</y>
+     <width>261</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>Search...</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="pollsearch">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>320</y>
+     <width>261</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>Search...</string>
    </property>
   </widget>
  </widget>
