--- a/ipd/ppp/plugin/ppppp/ppppp.ui
+++ b/ipd/ppp/plugin/ppppp/ppppp.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>570</width>
-    <height>552</height>
+    <height>574</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,9 +19,9 @@
   <widget class="QPushButton" name="stier">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>470</y>
-     <width>80</width>
+     <x>80</x>
+     <y>440</y>
+     <width>71</width>
      <height>25</height>
     </rect>
    </property>
@@ -35,9 +35,9 @@
   <widget class="QPushButton" name="atier">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>470</y>
-     <width>80</width>
+     <x>160</x>
+     <y>440</y>
+     <width>71</width>
      <height>25</height>
     </rect>
    </property>
@@ -51,9 +51,9 @@
   <widget class="QPushButton" name="btier">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>470</y>
-     <width>80</width>
+     <x>239</x>
+     <y>440</y>
+     <width>71</width>
      <height>25</height>
     </rect>
    </property>
@@ -67,9 +67,9 @@
   <widget class="QPushButton" name="ctier">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>470</y>
-     <width>80</width>
+     <x>319</x>
+     <y>440</y>
+     <width>71</width>
      <height>25</height>
     </rect>
    </property>
@@ -83,9 +83,9 @@
   <widget class="QPushButton" name="dtier">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>470</y>
-     <width>80</width>
+     <x>399</x>
+     <y>440</y>
+     <width>71</width>
      <height>25</height>
     </rect>
    </property>
@@ -116,12 +116,12 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="newpoll">
+  <widget class="QPushButton" name="button_newpoll">
    <property name="geometry">
     <rect>
      <x>290</x>
      <y>60</y>
-     <width>101</width>
+     <width>81</width>
      <height>25</height>
     </rect>
    </property>
@@ -132,12 +132,12 @@
     <string>New Poll...</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="newpollcurdir">
+  <widget class="QPushButton" name="button_use_curdir">
    <property name="geometry">
     <rect>
-     <x>400</x>
+     <x>380</x>
      <y>60</y>
-     <width>151</width>
+     <width>91</width>
      <height>25</height>
     </rect>
    </property>
@@ -145,48 +145,28 @@
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;You might order this protein.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="text">
-    <string>Just Use Current Dir</string>
+    <string>Use CurDir</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="reviewaction">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>380</y>
-     <width>371</width>
+     <x>220</x>
+     <y>400</y>
+     <width>331</width>
      <height>25</height>
     </rect>
    </property>
    <property name="text">
-    <string>cp $file ./ppp/{grade}_$filebase</string>
+    <string>cp $file ./ppp/$poll_$grade_$filebase</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QPushButton" name="button_quit">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>360</y>
-     <width>201</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Source Code Pro Semibold</family>
-     <pointsize>12</pointsize>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>local review acton</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="quit">
-   <property name="geometry">
-    <rect>
-     <x>470</x>
-     <y>510</y>
-     <width>81</width>
+     <x>480</x>
+     <y>530</y>
+     <width>71</width>
      <height>25</height>
     </rect>
    </property>
@@ -201,7 +181,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>410</y>
+     <y>470</y>
      <width>531</width>
      <height>51</height>
     </rect>
@@ -214,10 +194,13 @@ hr { height: 1px; border-width: 0; }
 li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Comment...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="placeholderText">
+    <string>Comment...</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="newopt">
+  <widget class="QPushButton" name="button_newopt">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -228,46 +211,6 @@ li.checked::marker { content: &quot;\2612&quot;; }
    </property>
    <property name="text">
     <string>New Option...</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>360</y>
-     <width>131</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Source Code Pro Semibold</family>
-     <pointsize>12</pointsize>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>click a grade</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>380</y>
-     <width>101</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Source Code Pro Semibold</family>
-     <pointsize>12</pointsize>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>to review</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
@@ -291,25 +234,25 @@ li.checked::marker { content: &quot;\2612&quot;; }
     <string>Prettier Protein Project Pymol Plug-in Panel</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="rewiewactionenabled">
+  <widget class="QCheckBox" name="opt_do_on_rank">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>220</x>
      <y>380</y>
-     <width>82</width>
+     <width>131</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>Do this on rank:</string>
    </property>
   </widget>
   <widget class="QPushButton" name="ftier">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>470</y>
-     <width>80</width>
+     <x>479</x>
+     <y>440</y>
+     <width>71</width>
      <height>25</height>
     </rect>
    </property>
@@ -320,12 +263,12 @@ li.checked::marker { content: &quot;\2612&quot;; }
     <string>F Tier</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="saveconfig">
+  <widget class="QPushButton" name="button_save_session">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>510</y>
-     <width>441</width>
+     <y>530</y>
+     <width>451</width>
      <height>25</height>
     </rect>
    </property>
@@ -336,7 +279,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
     <string>Save Prettier Protein Project Pymol Plug-in Panel Pickle to ~/.config/ppp</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="delopt">
+  <widget class="QPushButton" name="button_delopt">
    <property name="geometry">
     <rect>
      <x>160</x>
@@ -379,6 +322,113 @@ li.checked::marker { content: &quot;\2612&quot;; }
    </property>
    <property name="placeholderText">
     <string>Search...</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>440</y>
+     <width>51</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Source Code Pro Semibold</family>
+     <pointsize>12</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Rank</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="opt_shuffle">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>380</y>
+     <width>82</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Shuffle</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="opt_prefetch">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>400</y>
+     <width>82</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Pre-Fetch</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="opt_save_session">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>400</y>
+     <width>101</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Save Session</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="opt_hide_invalid">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>380</y>
+     <width>91</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Hide Invalid</string>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="button_refresh">
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>60</y>
+     <width>71</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;You might order this protein.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="text">
+    <string>Refresh</string>
+   </property>
+  </widget>
+  <widget class="QProgressBar" name="progress">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>350</y>
+     <width>531</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>0</number>
    </property>
   </widget>
  </widget>
