--- a/ipd/ppp/plugin/ppppp/newopt.ui
+++ b/ipd/ppp/plugin/ppppp/newopt.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>541</width>
-    <height>243</height>
+    <height>393</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,10 @@
     </rect>
    </property>
    <property name="text">
-    <string>Option Name</string>
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>ToggleOption Name</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="cmdon">
@@ -36,7 +39,10 @@
     </rect>
    </property>
    <property name="text">
-    <string>on enable pymol command</string>
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>this runs when clicked, ex: my_command enabled=True</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="cmdoff">
@@ -49,15 +55,18 @@
     </rect>
    </property>
    <property name="text">
-    <string>on disable pymol command</string>
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>this runs when unclicked, ex:: my_command enabled=False</string>
    </property>
   </widget>
   <widget class="QCheckBox" name="ispublic">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>160</y>
-     <width>351</width>
+     <x>130</x>
+     <y>350</y>
+     <width>161</width>
      <height>23</height>
     </rect>
    </property>
@@ -68,9 +77,9 @@
   <widget class="QPushButton" name="ok">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>190</y>
-     <width>80</width>
+     <x>290</x>
+     <y>350</y>
+     <width>111</width>
      <height>25</height>
     </rect>
    </property>
@@ -81,9 +90,9 @@
   <widget class="QPushButton" name="cancel">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>190</y>
-     <width>80</width>
+     <x>409</x>
+     <y>350</y>
+     <width>111</width>
      <height>25</height>
     </rect>
    </property>
@@ -115,13 +124,29 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>140</y>
-     <width>351</width>
+     <y>350</y>
+     <width>121</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>On by default</string>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="plainTextEdit">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>140</y>
+     <width>501</width>
+     <height>201</height>
+    </rect>
+   </property>
+   <property name="plainText">
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>Optional Library Code</string>
    </property>
   </widget>
  </widget>
