--- a/ipd/ppp/plugin/ppppp/newpoll.ui
+++ b/ipd/ppp/plugin/ppppp/newpoll.ui
@@ -57,7 +57,7 @@
     <rect>
      <x>20</x>
      <y>110</y>
-     <width>501</width>
+     <width>451</width>
      <height>25</height>
     </rect>
    </property>
@@ -148,6 +148,19 @@
    </property>
    <property name="text">
     <string>Create a new poll</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="openfiledialog">
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>110</y>
+     <width>41</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>...</string>
    </property>
   </widget>
  </widget>
