--- a/ipd/ppp/plugin/ppppp/newopt.ui
+++ b/ipd/ppp/plugin/ppppp/newopt.ui
@@ -26,7 +26,7 @@
     <string/>
    </property>
    <property name="placeholderText">
-    <string>ToggleOption Name</string>
+    <string>ToggleCommand Name</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="cmdon">
@@ -105,19 +105,20 @@
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>251</width>
+     <width>451</width>
      <height>21</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Source Code Pro Semibold</family>
-     <pointsize>12</pointsize>
+     <pointsize>16</pointsize>
+     <italic>true</italic>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
-    <string>Create a new toggle option</string>
+    <string>Create a new toggle command</string>
    </property>
   </widget>
   <widget class="QCheckBox" name="onstart">
