--- a/ipd/ppp/plugin/ppppp/ppppp.ui
+++ b/ipd/ppp/plugin/ppppp/ppppp.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>570</width>
-    <height>574</height>
+    <height>632</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>440</y>
+     <y>500</y>
      <width>71</width>
      <height>25</height>
     </rect>
@@ -36,7 +36,7 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>440</y>
+     <y>500</y>
      <width>71</width>
      <height>25</height>
     </rect>
@@ -52,7 +52,7 @@
    <property name="geometry">
     <rect>
      <x>239</x>
-     <y>440</y>
+     <y>500</y>
      <width>71</width>
      <height>25</height>
     </rect>
@@ -68,7 +68,7 @@
    <property name="geometry">
     <rect>
      <x>319</x>
-     <y>440</y>
+     <y>500</y>
      <width>71</width>
      <height>25</height>
     </rect>
@@ -84,7 +84,7 @@
    <property name="geometry">
     <rect>
      <x>399</x>
-     <y>440</y>
+     <y>500</y>
      <width>71</width>
      <height>25</height>
     </rect>
@@ -152,7 +152,7 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>400</y>
+     <y>460</y>
      <width>331</width>
      <height>25</height>
     </rect>
@@ -165,7 +165,7 @@
    <property name="geometry">
     <rect>
      <x>480</x>
-     <y>530</y>
+     <y>590</y>
      <width>71</width>
      <height>25</height>
     </rect>
@@ -181,7 +181,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>470</y>
+     <y>530</y>
      <width>531</width>
      <height>51</height>
     </rect>
@@ -238,7 +238,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>380</y>
+     <y>440</y>
      <width>131</width>
      <height>23</height>
     </rect>
@@ -251,7 +251,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <property name="geometry">
     <rect>
      <x>479</x>
-     <y>440</y>
+     <y>500</y>
      <width>71</width>
      <height>25</height>
     </rect>
@@ -299,7 +299,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>440</y>
+     <y>500</y>
      <width>61</width>
      <height>21</height>
     </rect>
@@ -317,7 +317,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>380</y>
+     <y>440</y>
      <width>82</width>
      <height>23</height>
     </rect>
@@ -330,7 +330,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>400</y>
+     <y>460</y>
      <width>82</width>
      <height>23</height>
     </rect>
@@ -339,24 +339,24 @@ li.checked::marker { content: &quot;\2612&quot;; }
     <string>Pre-Fetch</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="opt_save_session">
+  <widget class="QCheckBox" name="opt_use_rsync">
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>400</y>
+     <y>460</y>
      <width>101</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
-    <string>Save Session</string>
+    <string>use rsync</string>
    </property>
   </widget>
   <widget class="QCheckBox" name="opt_hide_invalid">
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>380</y>
+     <y>440</y>
      <width>91</width>
      <height>23</height>
     </rect>
@@ -372,7 +372,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>530</y>
+     <y>590</y>
      <width>71</width>
      <height>25</height>
     </rect>
@@ -404,7 +404,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>530</y>
+     <y>590</y>
      <width>71</width>
      <height>25</height>
     </rect>
@@ -420,7 +420,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>530</y>
+     <y>590</y>
      <width>71</width>
      <height>25</height>
     </rect>
@@ -430,6 +430,58 @@ li.checked::marker { content: &quot;\2612&quot;; }
    </property>
    <property name="text">
     <string>Restart</string>
+   </property>
+  </widget>
+  <widget class="QSlider" name="horizontalSlider">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>380</y>
+     <width>531</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="show_current_file">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>410</y>
+     <width>531</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="placeholderText">
+    <string>Current File</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="randT">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>60</y>
+     <width>41</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>randT</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="randP">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>60</y>
+     <width>41</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>randP</string>
    </property>
   </widget>
  </widget>
