--- a/ipd/ppp/plugin/ppppp/gui_new_pymolcmd.ui
+++ b/ipd/ppp/plugin/ppppp/gui_new_pymolcmd.ui
@@ -104,7 +104,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Requires Ligad:</string>
+            <string>Requires Ligand:</string>
            </property>
           </widget>
          </item>
@@ -131,7 +131,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Requires Synmetry:</string>
+            <string>Requires Symmetry:</string>
            </property>
           </widget>
          </item>
@@ -204,6 +204,45 @@
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <spacer name="horizontalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
        <item>
         <widget class="QCheckBox" name="onstart">
          <property name="text">
