--- a/ipd/ppp/plugin/ppppp/gui_new_pymolcmd.ui
+++ b/ipd/ppp/plugin/ppppp/gui_new_pymolcmd.ui
@@ -17,7 +17,7 @@
    <item row="0" column="0">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="title">
        <property name="font">
         <font>
          <family>Source Code Pro Semibold</family>
