WIP ppp edit and clone working, fix use cur dir and use dir...

--- a/ipd/ppp/plugin/ppppp/gui_new_poll.ui
+++ b/ipd/ppp/plugin/ppppp/gui_new_poll.ui
@@ -112,6 +112,9 @@
            <property name="text">
             <string>Is Public?</string>
            </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
