--- a/ipd/ppp/plugin/ppppp/gui_new_pymolcmd.ui
+++ b/ipd/ppp/plugin/ppppp/gui_new_pymolcmd.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>NewOption</class>
- <widget class="QDialog" name="NewOption">
+ <class>PPPPPNewOption</class>
+ <widget class="QDialog" name="PPPPPNewOption">
   <property name="geometry">
    <rect>
     <x>0</x>
