--- a/ipd/ppp/plugin/ppppp/gui_grid_main.ui
+++ b/ipd/ppp/plugin/ppppp/gui_grid_main.ui
@@ -69,6 +69,13 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QPushButton" name="button_newflow">
+             <property name="text">
+              <string>New Workflow...</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
          <item>
